mongo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: mongo
spec:
  type: NodePort
  selector:
    app: mongodbpod
  ports:
    - port: 27017       # Cluster-internal port
      targetPort: 27017 # Container port
      nodePort: 30017   # External port (between 30000-32767)
