mongo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: mongo.ad.irdlab.com
      http:
        paths:
          - backend:
              service:
                name: mongosvc
                port:
                  name: http
            path: /
            pathType: Prefix
